samples/_failures_safe/1761498843_c81ead_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9bfdda93.c: In function ‘main’:
./samples/SAFE/__tmp_9bfdda93.c:150:5: error: expected identifier or ‘(’ at end of input
  150 |     for (int
      |     ^~~
./samples/SAFE/__tmp_9bfdda93.c:150:5: error: expected declaration or statement at end of input
